@@ -1,3 +1,10 @@
+Sat Oct 15 00:57:11 UTC 2011  Abdullah Sowayan  <sowayan@gmail.com>
+
+        * ace/config-macosx-lion.h:
+        * include/makeinclude/platform_macosx_lion.GNU:
+
+          Minor enhancements to the files above.
+
 Mon Oct 10 12:13:52 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * protocols/ace/INet/ClientRequestHandler.h:
